2009-10-28 Magnus Hagdorn
 * doc/common/packages.tex: add new package
 * doc/dg/Makefile.am: distribute new file
 * doc/dg/dg.tex: document memory handling scheme
 * doc/dg/memory.f90: example program demonstrating memory handling macros
 * libglimmer/Makefile.am: add new file
 * libglimmer/glimmer_global.F90: define new kind integer for size/len
 * libglimmer/glimmer_log.F90: add subroutines for reporting (de)allocation
   errors
 * libglimmer/glimmer_memory.inc: new set of preprocessor macros for managing
   memory
 * libglimmer/glimmer_vertcoord.F90: add procedures for creating/destroying
   vertCoord_type, use new memory management macros

2009-10-28 Magnus Hagdorn
 * libglide/glide_temp.F90: use standard intrinsic for min rather than dmin1
 * libglide/glide_tempFullSoln.F90: renamed vertCoord_type, moved sigma into
   vertCoord_type and removed sigma and upn from temperature type
 * libglimmer/glimmer_vertcoord.F90: added doxygen strings, added sigma to
   vertCoord_type

2009-10-28 Ian Rutt
 * libglide/glide_deriv.F90: Removed redundant mask argument from timederv
   call
 * libglide/glide_thckADI.F90: Passing geometsy%empty is unnecessary: used
   thickness instead
 * libglide/glide_thck.F90: Moved call to glide_maskthck inside thickness
   solution, and moved glide_maskthck into glide_thck mmodule
 * libglide/glide_bwat.F90: Fixed incorrect reference to glide_utils
 * Regtested against e2.a

2009-10-27 Ian Rutt
 * Replaced calls to geomderv with call to new glimmer_deriv module
 * Regtested against e2.a

2009-10-27 Ian Rutt
 * Merged trunk r1329:1357 with ChangeLog changes below:
 * Regtested against e2.a

----------------------------------------------------------------------
2009-10-16 Magnus Hagdorn
 * example-drivers/eis/src/eis_ela.F90: use parameter for internal message
   buffer size
 * example-drivers/eis/src/eis_slc.F90: ditto
 * example-drivers/eis/src/eis_temp.F90: ditto
 * libglide/glimmer_ncio.F90: ditto

2009-10-16 Magnus Hagdorn